force-app/main/default/objects/LicenseVerification__c/LicenseVerification__c.object-meta.xml
<CustomObject>
    <description>Stores medical license verification details for healthcare providers, including status, expiration, and audit logs.</description>
    <label>License Verification</label>
    <nameField>
        <displayFormat>LV-{000000}</displayFormat>
        <label>Verification ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>License Verifications</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>