force-app/main/default/objects/LicenseVerification__c/fields/ApiRequestLog__c.field-meta.xml
<CustomField>
    <fullName>ApiRequestLog__c</fullName>
    <description>Stores the raw API request sent to the external verification service for audit purposes.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>API Request Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>