force-app/main/default/objects/LicenseVerification__c/fields/ApiResponseLog__c.field-meta.xml
<CustomField>
    <fullName>ApiResponseLog__c</fullName>
    <description>Stores the raw API response received from the external verification service for audit purposes.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>API Response Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>