force-app/main/default/objects/LicenseVerification__c/fields/ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDate__c</fullName>
    <description>The date on which the medical license expires.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Expiration Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>