force-app/main/default/objects/LicenseVerification__c/fields/IssuingAuthority__c.field-meta.xml
<CustomField>
    <fullName>IssuingAuthority__c</fullName>
    <description>The issuing authority or state medical board that granted the license.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Issuing Authority</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>