force-app/main/default/objects/LicenseVerification__c/fields/LicenseNumber__c.field-meta.xml
<CustomField>
    <fullName>LicenseNumber__c</fullName>
    <description>The unique identifier for the medical license.</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>Enter the full medical license number.</inlineHelpText>
    <label>License Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>