force-app/main/default/objects/LicenseVerification__c/fields/Name_Match_AI_Decision__c.field-meta.xml
<CustomField>
    <fullName>Name_Match_AI_Decision__c</fullName>
    <label>Name Match AI Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Match</fullName>
            </value>
            <value>
                <fullName>Review</fullName>
            </value>
            <value>
                <fullName>Mismatch</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>