force-app/main/default/objects/LicenseVerification__c/fields/Name_Match_AI_Reason__c.field-meta.xml
<CustomField>
    <fullName>Name_Match_AI_Reason__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name Match AI Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>