force-app/main/default/objects/LicenseVerification__c/fields/Name_Match_AI_Score__c.field-meta.xml
<CustomField>
    <fullName>Name_Match_AI_Score__c</fullName>
    <label>Name Match AI Score</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>