force-app/main/default/objects/LicenseVerification__c/fields/Name_On_License__c.field-meta.xml
<CustomField>
    <fullName>Name_On_License__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name On License</label>
    <length>255</length>
    <type>Text</type>
</CustomField>