force-app/main/default/objects/LicenseVerification__c/fields/Provider__c.field-meta.xml
<CustomField>
    <fullName>Provider__c</fullName>
    <description>The healthcare provider (Contact) associated with this license.</description>
    <label>Provider</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>License Verifications</relationshipLabel>
    <relationshipName>License_Verifications</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>