force-app/main/default/objects/LicenseVerification__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The current verification status of the license.</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending Verification</fullName>
                <default>true</default>
                <label>Pending Verification</label>
            </value>
            <value>
                <fullName>Valid</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Not Found</fullName>
            </value>
            <value>
                <fullName>Requires Manual Review</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>